syntax = "proto3";

package NKVStore.NService;

import "get_operation.proto";
import "put_operation.proto";
import "remove_operation.proto";

service TDpkvsService {
  rpc Get(TGetRequest) returns (TGetResponse);
  rpc Put(TPutRequest) returns (TPutResponse);
  rpc Remove(TRemoveRequest) returns (TRemoveResponse);
}
