syntax = "proto3";

package NKVStore.NService;

message TPutRequest {
  string key = 1;
  bytes value = 2;
}

message TPutResponse {
}
