syntax = "proto3";

package NKVStore.NService;

message TRemoveRequest {
  string key = 1;
}

message TRemoveResponse {
  bool removed = 1;
}
